<resources>

    <string name="app_name">Auto-Response</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home_screen">Auto-Response</string>
    <string name="create_event">Create Event</string>
    <string name="new_create_event">New Create Event</string>
    <string name="view_events">View Events</string>
    <string name="exit">Exit</string>
    <string name="title_activity_event_list">My Events:</string>
    <string name="edit_response">Edit Response</string>
    <string name="edit_conditions">Edit Conditions</string>
    <string name="delete_event">Delete Event</string>
    <string name="back_to_home">Back To Home</string>
    <string name="title_activity_condition_selector">Select condition:</string>
    <string name="driving">Driving</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="incoming_text">Incoming Text</string>
    <string name="continue_button_label">Continue</string>
    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thur">Thur</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>
    <string name="title_activity_response_selector">Select responses:</string>
    <string name="change_phone_mode">Change Phone Mode</string>
    <string name="normal">Normal</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="reminder">Reminder at:</string>
    <string name="text_response_">Text Response:</string>
    <string name="title_activity_location_selector">Select a Location:</string>
    <string name="my_locations">My Locations</string>
    <string name="current_location">Add Current Location</string>
    <string name="add_location">Add Current Location</string>
    <string name="ok">OK</string>
    <string name="title_activity_location_creator">Create Location</string>
    <string name="add_current_location">Add</string>
    <string name="add_location_name">Name:</string>
    <string name="enter_a_radius_in_miles_">Radius:</string>
    <string name="radius_hint_text">(miles)</string>
    <string name="title_activity_event_display">View Event</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_question">Are you sure you want to delete this event?</string>
    <string name="event_list_empty_text">You don\'t have any events yet. Create one using the menu button.</string>
    <string name="location_list_empty_text">You don\'t have any locations stored. Store your current location using the menu button.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help">Help</string>
    
    <string name="prompt1">Events</string>
    <string name="prompt2">Responses</string>
    <string-array name = "all_events">
        <item>Entered Known Wifi</item>
        <item>Received a Text While Driving</item>
        <item>Received a Text</item>
        <item>Received a Call</item>
    </string-array>
    
    <string-array name = "all_responses">
        <item>Respond with a text message</item>
        <item>Adjust Phone Settings</item>
    </string-array>
    
    <string name="help_text_create_event">

        To create a response event, go to the main screen and choose \'Create New Event\' from the menu.
        You will be prompted to name your event, and then you will be able to choose the conditions for your response.
        Next, you define a response, which will be triggered when all conditions are met.
        Your response can be to send a text message to the last person who texted you, change the phone\'s ringer mode, or to set up a reminder for later.

    </string>

</resources>