<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/driving_checkbox"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/driving" />

        <CheckBox
            android:id="@+id/location_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

        <CheckBox
            android:id="@+id/time_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/start_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" 
                android:text="Start time:" />
            
            <TimePicker
                android:id="@+id/start_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/end_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" 
                android:text="End time:" />

            <TimePicker
                android:id="@+id/end_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/day_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day" />
        
        <LinearLayout
        	android:layout_marginLeft="30dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
        	<CheckBox
            android:id="@+id/monday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_mon"/>
        	<CheckBox
            android:id="@+id/tuesday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_tue"/>
        	<CheckBox
            android:id="@+id/wednesday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_wed"/>
        	<CheckBox
            android:id="@+id/thursday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_thur"/>
        </LinearLayout>
        	
        <LinearLayout
            android:layout_marginLeft="30dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	
        	<CheckBox
            android:id="@+id/friday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_fri"/>
        	<CheckBox
            android:id="@+id/saturday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_sat"/>
        	<CheckBox
            android:id="@+id/sunday_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_sun"/>
            
        </LinearLayout>
        

        <CheckBox
            android:id="@+id/incoming_text_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incoming_text" />

        <Button
            android:id="@+id/condition_selector_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createCondition"
            android:text="@string/continue_button_label" />
    </LinearLayout>

</ScrollView>